<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Surf</string>
    <string name="copyright_information">dddqmmx© 2018–2022</string>
    <string name="username">UserName</string>
    <string name="password">PassWord</string>
    <string name="login_title">Login to your account</string>
    <string name="login_hint">The account will only be saved locally and will not be uploaded to the official client</string>
    <string name="server_select">login client</string>
    <string name="message">Message</string>
    <string name="friend">Friend</string>
    <string name="my_info">My Info</string>
    <string name="default_title">Default Title</string>
    <string name="default_name">Default Name</string>
    <string name="default_message">Default Message</string>
    <string name="default_user_name">Default User Name</string>
    <string name="settings">Setting</string>
    <string name="developers">Developers</string>
    <string name="friend_request">Friend Request</string>
    <string name="friend_list">Friend List</string>
    <string name="send">Send</string>
    <string name="developer_option_title">Developer Option Title</string>
    <string name="toMainButton">toMainActivityButton</string>
    <string name="quit">Quit</string>
    <string name="online">online</string>
    <string name="account">account</string>
    <string name="personal_profile">personal profile</string>
    <string name="self_introduction">I don\'t know how translate this</string>
    <string name="send_massage">Send Massage</string>
    <string name="add_friend">add friend</string>
    <string name="user_info">user info</string>
    <string name="show_image">show image</string>
    <string name="friend_request_list">Friend Request List</string>
    <string name="agree">agree</string>
    <string name="add_friend_or_add_group">add friend or add group</string>
    <string name="create_group">create group</string>
    <string name="select_group">select group</string>
    <string name="select_user">select user</string>
    <string name="id_or_user_name">id or user name</string>
    <string name="add_group" />
    <string name="info">Info</string>
    <string name="default_id">default id</string>
    <string name="group_id">group id</string>
    <string name="group_info">group info</string>
    <string name="group_request">group request</string>
    <string name="group_request_list">group request list</string>
    <string name="applications_for_membership">applications or membership</string>
    <string-array name="default_server_arrays">
        <item>official client</item>
    </string-array>

</resources>