<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:setting_buttom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#588FBA"
        android:padding="15dp">
        <com.dd.surf.view.ClipPathCircleView
            android:id="@+id/head"
            android:src="@drawable/default_head"
            android:layout_width="80dp"
            android:layout_height="80dp"/>
        <RelativeLayout
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/head">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/default_name"
                android:textColor="#FFFFFF" />
            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/default_user_name"
                android:textColor="#C2E5FF"
                android:layout_below="@id/name" />
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/optionsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.dd.surf.view.SettingButton
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            setting_buttom:icon="@drawable/settings"
            setting_buttom:text="@string/settings" />

        <com.dd.surf.view.SettingButton
            android:id="@+id/developers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            setting_buttom:icon="@drawable/developers"
            setting_buttom:text="@string/developers" />

        <com.dd.surf.view.SettingButton
            android:id="@+id/quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            setting_buttom:icon="@drawable/power"
            setting_buttom:text="@string/quit" />

    </LinearLayout>

</LinearLayout>