<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <com.dd.surf.view.ClipPathCircleView
        android:id="@+id/head"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/default_head">
    </com.dd.surf.view.ClipPathCircleView>

    <RelativeLayout
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp">
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_name"
            android:textColor="@color/black"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/message"
            android:layout_below="@id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:text="@string/default_message">
        </TextView>
    </RelativeLayout>

    <Button
        android:id="@+id/agree_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/agree">
    </Button>

</RelativeLayout>
