<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    tools:context=".UserInfo"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_above="@+id/optionsLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#588FBA"
                android:padding="15dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    card_view:cardCornerRadius="99999dp">
                    <ImageView
                        android:id="@+id/head"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/default_head" />
                </androidx.cardview.widget.CardView>
                <RelativeLayout
                    android:layout_centerVertical="true"
                    android:layout_marginStart="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/card_view">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/default_name"
                        android:textColor="#FFFFFF"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/online"
                        android:textColor="#C2E5FF"
                        android:layout_below="@id/name"/>
                </RelativeLayout>

            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="#3A95D5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account">
                </TextView>
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/user_name"
                        android:textColor="#222222"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username">
                    </TextView>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="#82868A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username">
                    </TextView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#EBEBEB">
                    </View>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/personal_profile"
                        android:textColor="#222222"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_profile">
                    </TextView>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="#82868A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_profile">
                    </TextView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#EBEBEB">
                    </View>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="#3A95D5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_image">
                </TextView>
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/nanami01"/>
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/nanami02"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/optionsLayout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button1"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_friend">
            </Button>
            <Button
                android:id="@+id/button2"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_massage">
            </Button>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>